force-app/main/default/objects/bvd_connector__Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>bvd_connector__Action__c</fullName>
        <label>Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bvd_connector__BvD_Field_Label__c</fullName>
        <label>BvD Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__BvD_Field_Type__c</fullName>
        <label>BvD Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__BvD_Field__c</fullName>
        <label>BvD Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Data_Dimension__c</fullName>
        <description>Dimension if iterable</description>
        <inlineHelpText>Dimension if iterable</inlineHelpText>
        <label>Data Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Mapped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated</description>
        <label>Mapped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Master__c</fullName>
        <label>Master</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>BvD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bvd_connector__Name__c</fullName>
        <externalId>true</externalId>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>bvd_connector__Query__c</fullName>
        <formula>IF (
  BEGINS( bvd_connector__BvD_Field__c , &quot;CPYCONTACTS&quot;),
  
  bvd_connector__BvD_Field__c &amp; &quot; FILTER [Filter.Name=ContactsFilter;ContactsFilter.UCI={0};ContactsFilter.HierarchicCodeToExcludeQueryString=3|4|;ContactsFilter.SourcesToExcludeQueryString=99B|59B|69B|70B|0|;ContactsFilter.HierarchicCodeQueryString=0|1|2|] USING [Parameters.Currency=SESSION;] AS &quot; &amp; bvd_connector__BvD_Field__c,

 IF (
  NOT(ISBLANK ( bvd_connector__Data_Dimension__c )) &amp;&amp;  bvd_connector__BvD_Field_Type__c = &quot;MoneyValue&quot;,
  bvd_connector__BvD_Field__c &amp; &quot; USING [Parameters.Currency=SESSION;Parameters.DimensionSelName=&quot; &amp; bvd_connector__Data_Dimension__c &amp; &quot;;&quot; &amp; bvd_connector__Data_Dimension__c &amp; &quot;.Index=0;&quot; &amp; bvd_connector__Data_Dimension__c &amp; &quot;.Index0=0;&quot; &amp; bvd_connector__Data_Dimension__c &amp; &quot;.Index1=0;] AS &quot; &amp; bvd_connector__BvD_Field__c,
  IF (
   NOT(ISBLANK( bvd_connector__Data_Dimension__c )),
   bvd_connector__BvD_Field__c &amp; &quot; USING [Parameters.DimensionSelName=&quot; &amp; bvd_connector__Data_Dimension__c &amp; &quot;;&quot; &amp; bvd_connector__Data_Dimension__c &amp; &quot;.Index=0;&quot; &amp; bvd_connector__Data_Dimension__c &amp; &quot;.Index0=0;&quot; &amp; bvd_connector__Data_Dimension__c &amp; &quot;.Index1=0;] AS &quot; &amp; bvd_connector__BvD_Field__c,
   IF (
    bvd_connector__BvD_Field_Type__c == &quot;MoneyValue&quot;,
    bvd_connector__BvD_Field__c &amp; &quot; USING [Parameters.Currency=SESSION;] AS &quot; &amp; bvd_connector__BvD_Field__c,
    bvd_connector__BvD_Field__c &amp; &quot; AS &quot; &amp; bvd_connector__BvD_Field__c
   )
  )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Query</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bvd_connector__SF_Field_Label__c</fullName>
        <label>SF Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__SF_Field__c</fullName>
        <label>SF Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__SObject__c</fullName>
        <label>SObject</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bvd_connector__Type_Info__c</fullName>
        <label>Type Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Mapping</label>
    <listViews>
        <fullName>bvd_connector__All</fullName>
        <columns>NAME</columns>
        <columns>bvd_connector__Action__c</columns>
        <columns>bvd_connector__SObject__c</columns>
        <columns>bvd_connector__SF_Field__c</columns>
        <columns>bvd_connector__BvD_Field__c</columns>
        <columns>bvd_connector__BvD_Field_Type__c</columns>
        <columns>bvd_connector__Data_Dimension__c</columns>
        <columns>bvd_connector__Excluded__c</columns>
        <columns>bvd_connector__Mapped__c</columns>
        <columns>bvd_connector__Invalid__c</columns>
        <columns>bvd_connector__Master__c</columns>
        <columns>bvd_connector__Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FM-{00000}</displayFormat>
        <label>Field Mapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>